* Curve: prevent from a linebreak in GenericList table headers (style.css) [Bug 3441]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8402 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/style.css
+++ b/Themes/curve/style.css
@@ -408,10 +408,14 @@ tr.catbg th.smalltext
 	padding: 1em 0 0.5em 0;
 }
 
-/* GenericList buttons */
+/* GenericList */
 .additional_row input
 {
 	margin-left: 1em;
+}
+table.table_grid thead tr.catbg th.smalltext
+{
+    white-space: nowrap;
 }
 
 /* Color for background of posts requiring approval */
